# game

./: README.md  build.gradle  gradlew  settings.gradle
.github/workflows/: android-ci.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  vulkan_renderer.cpp
app/src/main/java/com/yourvulkanapp/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties  gradle-wrapper.properties.bak
